# Chat2Responses

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
admin-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-ui/src/: main.tsx  styles.css
admin-ui/src/api/: admin.ts  client.ts
admin-ui/src/app/: AdminShell.tsx  App.tsx  navigation.tsx
admin-ui/src/components/common/: BrandBlock.tsx  ConfirmDialog.tsx  Field.tsx  Metric.tsx  ModelMultiSelect.tsx  PanelHeader.tsx  PanelStack.tsx  StatusBadge.tsx  SwitchField.tsx  Text.tsx  ToastMessage.tsx
admin-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  data-table.tsx  dialog.tsx  form.tsx  input.tsx  label.tsx  select.tsx  sheet.tsx  switch.tsx  toast.tsx
admin-ui/src/features/api-keys/: ApiKeysPanel.tsx  CreateApiKeyDialog.tsx
admin-ui/src/features/auth/: AuthScreen.tsx
admin-ui/src/features/logs/: LogsPanel.tsx
admin-ui/src/features/models/: ModelSheet.tsx  ModelsPanel.tsx
admin-ui/src/features/overview/: OverviewPanel.tsx
admin-ui/src/features/settings/: SettingsPanel.tsx
admin-ui/src/features/tutorial/: TutorialPanel.tsx
admin-ui/src/features/upstreams/: UpstreamSheet.tsx  UpstreamsPanel.tsx
admin-ui/src/lib/: clipboard.ts  format.ts
admin-ui/src/types/: admin.ts
chat2responses/: __init__.py
scripts/: build-push.sh  package-docker.sh  release.sh
src/: codex_catalog.rs  db.rs  lib.rs  main.rs  security.rs  session.rs  stream.rs  translate.rs  types.rs
tests/: compat_chat_completions.rs  compat_codex_0_128.rs  compat_deepseek_live.rs  compat_deepseek_v4_pro.rs  compat_kimi_live.rs
tests/fixtures/: VERSIONS.md
tests/fixtures/codex_0_128_0/: with_namespace_tool.json  with_reasoning_item.json
