[package]
name = "chat2responses"
version = "0.2.0"
edition = "2021"
description = "Responses API to Chat Completions service proxy"
license = "MIT"
keywords = ["openai", "llm", "proxy", "responses", "chat-completions"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "chat2responses"
path = "src/lib.rs"

[[bin]]
name = "chat2responses"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
bytes = "1"
pin-project-lite = "0.2"
eventsource-stream = "0.2"
async-stream = "0.3"
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
